--- a/TestChooser.csproj
+++ b/TestChooser.csproj
@@ -69,13 +69,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TestChooser.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="TestChooser.cs" />
     <Compile Include="TestChooser.Designer.cs">
       <DependentUpon>TestChooser.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
