--- a/TestChooser.csproj
+++ b/TestChooser.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="TestChooser.resx">
       <DependentUpon>TestChooser.cs</DependentUpon>
@@ -106,6 +107,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ChooserDefinition.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Amphenol.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
